[package]
name = "json-exporter"
version = "0.1.0"
authors = ["Alexander Koval <kovalidis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
fehler = "1"
jsonpath = { git = "https://github.com/anti-social/jsonpath-rs", rev = "8d7e139" }
nom = { version = "6", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
void = "1"

[dev-dependencies]
indoc = "1"
